# media_video_dump

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
media_video_dump/: main.py  schemas.py
media_video_dump/services/: media_transfer.py
