[tool.poetry]
name = "media-video-dump"
version = "0.1.0"
description = ""
authors = ["imchris <imchrisorz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2025.1.26"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
